Bug 1827582 - Fix flex container's reflow status when unbreakable flex items consume all content block-size in current fragment. r=dholbert, a=RyanVM

The bug occurs in `PopulateReflowOutput()` when we change the reflow status of
an auto-height flex container to "complete" because unbreakable tall flex items
have consumed all the theoretical/unfragmented content block-size. Later in
`PopulateReflowOutput()`, we'll change the reflow status [1] to "overflow
incomplete," which cause the next-in-flow to become an overflow container.

It is possible that the container's block-size will grow due to pushed items.
However, `nsSplittableFrame::CalcAndCacheConsumedBSize()` [2] doesn't consider
the overflow container's block-size, so we never correctly consume the extra
block-size growth in later fragments due to pushed items. We end up creating
infinite columns.

[1] https://searchfox.org/mozilla-central/rev/54c533e94ae786056a43231f230c7d9b0773cb80/layout/generic/nsFlexContainerFrame.cpp#5623-5626
[2] https://searchfox.org/mozilla-central/rev/54c533e94ae786056a43231f230c7d9b0773cb80/layout/generic/nsSplittableFrame.cpp#201-204

Differential Revision: https://phabricator.services.mozilla.com/D175543